agrego el tp de java

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Programacion 2/InstalacionJava/HolaMundoJava/nbproject/private/
 /Programacion 2/InstalacionJava/HolaMundoJava/build/
+/Programacion 2/TP_1/TP_1_P2/nbproject/private/
