tp1 p2 finalizado y agregado

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /Programacion 2/InstalacionJava/HolaMundoJava/nbproject/private/
 /Programacion 2/InstalacionJava/HolaMundoJava/build/
 /Programacion 2/TP_1/TP_1_P2/nbproject/private/
+/Programacion 2/TP_1/HolaMundo/nbproject/private/
+/Programacion 2/TP_1/HolaMundo/build/
+/Programacion 2/TP_1/TP_1_P2/build/
