--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Programacion 2/TP_1/HolaMundo/nbproject/private/
 /Programacion 2/TP_1/HolaMundo/build/
 /Programacion 2/TP_1/TP_1_P2/build/
+/Programacion 2/TP_2/TP_2_P2/nbproject/private/
+/Programacion 2/TP_2/TP_2_P2/build/
