--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /Programacion 2/TP_1/TP_1_P2/build/
 /Programacion 2/TP_2/TP_2_P2/nbproject/private/
 /Programacion 2/TP_2/TP_2_P2/build/
+/Programacion 2/TP_3/TP_3_P2/nbproject/private/
+/Programacion 2/TP_3/TP_3_P2/build/
+/Programacion 2/TP_3/TP_3_P2/dist/
