comienza el tp4

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Programacion 2/TP_3/TP_3_P2/nbproject/private/
 /Programacion 2/TP_3/TP_3_P2/build/
 /Programacion 2/TP_3/TP_3_P2/dist/
+/Programacion 2/TP_4/TP_4_P2/nbproject/private/
