se agrega los dos primeros ejercicios de p2 tp5

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /Programacion 2/TP_3/TP_3_P2/dist/
 /Programacion 2/TP_4/TP_4_P2/nbproject/private/
 /Programacion 2/TP_4/TP_4_P2/build/
+/Programacion 2/TP_5/TP_5_P2/nbproject/private/
+/Programacion 2/TP_5/TP_5_P2/build/
+/Programacion 2/TP_5/TP_5_P2/dist/
