--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /Programacion 2/TP_5/TP_5_P2/nbproject/private/
 /Programacion 2/TP_5/TP_5_P2/build/
 /Programacion 2/TP_5/TP_5_P2/dist/
+/Programacion 2/TP_6/TP_6_P2/nbproject/private/
+/Programacion 2/TP_6/TP_6_P2/build/
