agrego el tp7 de p2

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /Programacion 2/TP_5/TP_5_P2/dist/
 /Programacion 2/TP_6/TP_6_P2/nbproject/private/
 /Programacion 2/TP_6/TP_6_P2/build/
+/Programacion 2/TP_7/TP_7_P2/nbproject/private/
