integrador bdd1 terminado

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /Programacion 2/TP_6/TP_6_P2/nbproject/private/
 /Programacion 2/TP_6/TP_6_P2/build/
 /Programacion 2/TP_7/TP_7_P2/nbproject/private/
+/Programacion 2/TP_7/Deadlock_try/nbproject/private/
