--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /Programacion 2/TP_6/TP_6_P2/build/
 /Programacion 2/TP_7/TP_7_P2/nbproject/private/
 /Programacion 2/TP_7/Deadlock_try/nbproject/private/
+/Programacion 2/TP_8/TP_8_P2/nbproject/private/
