falta solamente grabar el video de tpi estaditica

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /Programacion 2/TP_7/TP_7_P2/nbproject/private/
 /Programacion 2/TP_7/Deadlock_try/nbproject/private/
 /Programacion 2/TP_8/TP_8_P2/nbproject/private/
+.Rproj.user
